--- a/views/Announcement.html
+++ b/views/Announcement.html
@@ -69,7 +69,7 @@
       const app = document.querySelector('.app')
       document.addEventListener('DOMContentLoaded', function () {
         console.log('localstorage token', localStorage.getItem('token'))
-        const socket = io('https://s24esnb2.onrender.com', {
+        const socket = io('http://localhost:3000', {
           query: {
             token: localStorage.getItem('token'),
           },
