--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -13,6 +13,7 @@
         <div id="search-bar-container">
           <input type="text" id="search-input" placeholder="Search public messages..." />
           <button id="search-btn">🔍</button>
+          <button id="stop-search">Stop Search</button>
         </div>
         <div class="header">
           <div class="logo">ESN Chat Room</div>
