--- a/views/SpeedTest.html
+++ b/views/SpeedTest.html
@@ -45,7 +45,7 @@
     <script>
       const abortController = new AbortController()
       const { signal } = abortController
-      const socket = io('https://s24esnb2.onrender.com/', {
+      const socket = io('http://localhost:3000/', {
         query: {
           token: localStorage.getItem('token'),
         },
@@ -69,11 +69,6 @@
                 alert('Please enter valid duration and interval values.');
                 return;
             }
-
-        if (duration > 5) {
-          alert('Duration must be 5 seconds or less.')
-          return // Stop the execution if the condition is not met
-        }
 
         resultsDiv.style.display = 'block';
             postResultP.innerText = 'Speed Test Ongoing, Please Wait...';
@@ -194,6 +189,7 @@
           resultsDiv.style.display = 'block'; // Ensure the results div is visible
       postResultP.innerText = 'Test Stopped';
       getResultP.innerText = ''; // Clear the GET result text
+      
         }
         document.getElementById('stopTest').addEventListener('click', stopTest)
       })
