--- a/views/SpeedTest.html
+++ b/views/SpeedTest.html
@@ -45,7 +45,7 @@
     <script>
       const abortController = new AbortController()
       const { signal } = abortController
-      const socket = io('https://s24esnb2.onrender.com/', {
+      const socket = io('http://localhost:3000', {
         query: {
           token: localStorage.getItem('token'),
         },
