--- a/views/ESN Directory.html
+++ b/views/ESN Directory.html
@@ -379,6 +379,10 @@
         <div class="nav-icon">⚙️</div>
         <div class="nav-label">Settings</div>
       </a>
+      <a href="duelLobby.html" class="nav-item" id="enterDuel">
+        <div class="nav-icon">⚔️</div>
+        <div class="nav-label">Duel</div>
+      </a>
     </div>
 
     <div id="status-modal" class="modal">
