--- a/views/duelGame.html
+++ b/views/duelGame.html
@@ -30,7 +30,7 @@
         display: flex;
         flex-direction: column;
         width: 120%;
-        max-width: 600px;
+        max-width: 400px;
         flex-grow: 1;
         background: #fff;
     }
@@ -39,15 +39,20 @@
         flex-grow: 1;
         overflow: hidden;
         max-height: 15vh;
+        align-items: center;
+        justify-content: center;
+        
     }
     .message {
         flex-basis: 25vh;
         padding: 10px;
         border-top: 1px solid #000;
         border-bottom: 1px solid #000;
-        font-size: 0.6rem;
-        text-align: left;
+        font-size: 0.9rem;
+        justify-content: center;
+        text-align: center;
         color: rgb(9, 9, 9);
+        overflow-y: auto;
     }
     .choice-section {
         display: flex;
@@ -61,22 +66,31 @@
         color: white;
         border: none;
         padding: 10px;
-        font-size: 1rem;
+        font-size: 0.9rem;
         cursor: pointer;
         margin: 5px;
+    }
+    .system-messages {
+        
+        font-size: 1.0 rem;
+    }
+    .note-messages {
+        
+        font-size: 0.5 rem;
     }
 </style>
 </head>
 <body>
 <div class="container">
     <div class="header">THE GLORIOUS DUEL </div>
-    <div class="opponent">
+    <div class="opponent" id="opponentStatus">
 
     </div>
     <div class="message" id="systemMessage">
         <!-- Message will be displayed here -->
     </div>
-    <div class="choice-section">
+    <div class="choice-section" id="choice-buttons">
+        <div id="countdown" class="countdown">You have 15 seconds to make your decision.</div>
         <button class="choice-button" id="readyButton">⚔️ Ready</button>
         <button class="choice-button" id="forfeitButton">🏳️ Forfeit</button>
     </div>
