--- a/views/duelGame.html
+++ b/views/duelGame.html
@@ -38,7 +38,7 @@
         background: #fff;
     }
     .opponent {
-        background: rgb(249, 251, 217);
+        background: #d7f4d8;
         display: flex;
         flex-grow: 1;
         overflow: hidden;
@@ -52,7 +52,7 @@
     }
     .message {
         font-weight: bold;
-        background: rgb(249, 244, 217);
+        background: rgb(246, 246, 245);
         flex-basis: 25vh;
         padding: 10px;
         border-top: 1px solid #000;
