--- a/views/duelLobby.html
+++ b/views/duelLobby.html
@@ -35,7 +35,7 @@
         width: 125%;
         max-width: 400px;
         flex-grow: 1;
-        background: #fcf9f0;
+        background: #f8f7f6;
     }
     .lobby {
         display: flex;
@@ -111,11 +111,16 @@
         font-family: 'Uncial Antiqua', serif;
         border-radius: 10px;
     }
+    .stripe {
+        background: #4caf50;;
+        flex-basis: 3vh;
+    }
 </style>
 </head>
 <body>
 <div class="container">
     <div class="header">Knowledge Duel</div>
+    <div class="stripe"> </div>
     <div class="lobby">
         <div class="section">
             <div class="title">Online Players</div>
